# src/routes/v1/index.js
@@ -1,11 +1,13 @@
 const express = require('express');
 const router = express.Router();
 
-// users routers
+// routers
 const userRouter = require('./user');
-
+const stateRouter = require('./state');
+const cityRouter = require('./city');
 
 router.use('/users' , userRouter);
-
+router.use('/states' , stateRouter);
+router.use('/cities' , cityRouter);
 
 module.exports = router;
